Modificato il remove per essere più precisi.